--- a/src/pandas/02 - Mapa.ipynb
+++ b/src/pandas/02 - Mapa.ipynb
@@ -2752,7 +2752,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2770,6 +2772,15 @@
    ],
    "source": [
     "mapa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapa.save(\"accidentes.html\")"
    ]
   },
   {
@@ -3018,10 +3029,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.save(\"index.html\")"
+   ]
   },
   {
    "cell_type": "code",
